# afetch

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml  release.yml
docs/: .$architecture.drawio.bkp  architecture.drawio  requirements_spec.md
docs/design-docs/: afetch.md  afetch_ja.md  response.md  template.md
src/afetch/: __init__.py  config.py  errors.py  fetcher.py  types.py
tests/: __init__.py  conftest.py  test_fetcher.py  test_new_api.py
