[project]
name = "afetch"
version = "0.1.0"
description = "A simple asynchronous HTTP client with just the essentials."
readme = "README.md"
authors = [
    { name = "Daiki Okayama", email = "lawliet.d.k.m@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
afetch = "afetch:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
